<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Adapters">

    <TextView
        android:id="@+id/label_socket_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintBottom_toTopOf="@+id/editText_socket_label"
        app:layout_constraintEnd_toEndOf="@+id/editText_socket_label"
        app:layout_constraintStart_toStartOf="@+id/editText_socket_label"
        app:layout_constraintTop_toTopOf="@+id/label_tamper" />

    <TextView
        android:id="@+id/label_serial_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/serial_no"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintBottom_toTopOf="@+id/editText_serial_number"
        app:layout_constraintEnd_toEndOf="@+id/editText_serial_number"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/editText_serial_number"
        app:layout_constraintTop_toTopOf="@+id/label_tamper"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/label_tamper"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="2"
        android:text="@string/tamper_resisant"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_socket_label"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_tamper" />

    <EditText
        android:id="@+id/editText_serial_number"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="textPersonName|text"
        app:layout_constraintStart_toEndOf="@+id/editText_socket_label"
        app:layout_constraintTop_toBottomOf="@+id/label_tamper" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_socket"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_serial_number" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/rv_socket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton_add_socket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/iv_tamper"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_add_socket"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_add_socket"
        app:layout_constraintStart_toEndOf="@+id/editText_serial_number"
        app:layout_constraintTop_toBottomOf="@+id/label_tamper"
        app:srcCompat="@mipmap/green_button" />


</android.support.constraint.ConstraintLayout>